Fixed barchart jumping. (#58)
* Fixed barchart jumping.

Made production vertical and horizontal resolution consistent.

* Adjusted amount and delay in month tick text to be smaller so it's not croweded.

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 
 .tick {
-  font-size: 1.7em;
+  font-size: 1.25em;
 }
 
 .radio-choice-label {
